--- a/heavycenter/src/main/res/layout/frag_mana_good_new.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_good_new.xml
@@ -36,8 +36,7 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_wuniaoname"
             style_common:txt_left = "物料名称"
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请选择"
             style_common:iv_right = "@drawable/icon_arraw"
             style_common:boo_edit = "false"
             android:layout_width="match_parent"
@@ -46,8 +45,7 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_wuliaoguige"
             style_common:txt_left = "物料规格"
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请选择"
             style_common:iv_right = "@drawable/icon_arraw"
             style_common:boo_edit = "false"
             android:layout_width="match_parent"
@@ -56,8 +54,7 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_cangku"
             style_common:txt_left = "仓库    "
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请选择"
             style_common:iv_right = "@drawable/icon_arraw"
             style_common:boo_edit = "false"
             android:layout_width="match_parent"
@@ -68,8 +65,7 @@
             style_common:inputType="3"
             style_common:txt_maxlenth="11"
             style_common:txt_left = "最大库存"
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请输入"
             style_common:iv_right = "@color/transparent"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
@@ -80,8 +76,7 @@
             style_common:inputType="3"
             style_common:txt_maxlenth="11"
             style_common:txt_left = "安全库存"
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请输入"
             style_common:iv_right = "@color/transparent"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
@@ -90,8 +85,7 @@
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
             android:id="@+id/item_area"
             style_common:txt_left = "送货区域"
-            style_common:txt_two =""
-            style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请选择"
             style_common:iv_right = "@drawable/icon_arraw"
             style_common:boo_edit = "false"
             android:layout_width="match_parent"
