--- a/heavycenter/src/main/res/layout/frag_myce_general.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_general.xml
@@ -12,6 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_base_graybg"
+                  android:clickable="false"
+                  android:focusableInTouchMode="false"
+                  android:focusable="false"
         android:orientation="vertical">
         <com.android.lib.view.item.ItemView
             android:layout_marginTop="10dp"
