--- a/lib/src/main/res/values/values.xml
+++ b/lib/src/main/res/values/values.xml
@@ -47,6 +47,7 @@
         <attr name="txt_three" format="string"/>
         <attr name="txt_maxlenth" format="integer"/>
         <attr name="inputType" format="integer"/>
+        <attr name="txt_hint" format="string"/>
 
     </declare-styleable>
 
