--- a/heavycenter/src/main/res/layout/frag_main_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans.xml
@@ -32,6 +32,7 @@
             android:id="@+id/refresh"
             app:srlDragRate= "0.2"
             app:srlEnableLoadmoreWhenContentNotFull="false"
+            app:srlEnableOverScrollBounce="false"
             app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
