--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:clickable="true"
-        card_view:cardElevation="0.5dp"
+        card_view:cardElevation="2px"
         android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical"
         android:layout_marginLeft="@dimen/dimen_recylce_item_margin"
@@ -20,65 +20,69 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:padding="@dimen/dimen_recylce_item_padding"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:includeFontPadding="false"
-                    android:textColor="@color/color_recylce_item_title_txtcolor"
-                    android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-                    android:text="@{item_main_msg_all.senderName}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
 
-                <com.siweisoft.heavycenter.module.view.text.BgTextView
-                    android:includeFontPadding="false"
-                    android:id="@+id/tv_des"
-                    android:paddingTop="1dp"
-                    android:paddingBottom="1dp"
-                    android:paddingLeft="7dp"
-                    android:paddingRight="7dp"
-                    android:singleLine="true"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="10sp"
-                    android:visibility="gone"
-                    style_common:color_one="@color/white"
-                    style_common:stroke="1dp"
-                    style_common:color_stroke="@color/color_hv_yelll"
-                    style_common:corner="5dp"
-                    style_common:color_txt="@color/color_hv_yelll"
-
-                    style_common:color_two="@color/color_red_800"
-                    style_common:stroke_two="2dp"
-                    style_common:color_stroke_two="@color/color_hv_yelll"
-                    style_common:corner_two="5dp"
-                    style_common:color_txt_two="@color/white"
-                    style_common:boo_one="false"
-                    android:text="接受"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <View
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"/>
-                <TextView
-                    android:includeFontPadding="false"
-                    android:layout_gravity="top"
-                    android:id="@+id/tv_date"
-                    android:textColor="@color/color_recylce_item_date_txtcolor"
-                    android:textSize="@dimen/dimen_recylce_item_date_txtsize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
             <TextView
+                android:id="@+id/tv_sendname"
+                style_common:layout_constraintLeft_toLeftOf="parent"
+                style_common:layout_constraintTop_toTopOf="parent"
+                android:includeFontPadding="false"
+                android:textColor="@color/color_recylce_item_title_txtcolor"
+                android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+                android:text="fdfdfdsf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.siweisoft.heavycenter.module.view.text.BgTextView
+                style_common:layout_constraintTop_toTopOf="@+id/tv_sendname"
+                style_common:layout_constraintBottom_toBottomOf="@+id/tv_sendname"
+                style_common:layout_constraintLeft_toRightOf="@+id/tv_sendname"
+                android:includeFontPadding="false"
+                android:id="@+id/tv_des"
+                android:paddingTop="1dp"
+                android:paddingBottom="1dp"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:textSize="10sp"
+                android:visibility="gone"
+                style_common:color_one="@color/white"
+                style_common:stroke="1dp"
+                style_common:color_stroke="@color/color_hv_yelll"
+                style_common:corner="5dp"
+                style_common:color_txt="@color/color_hv_yelll"
+
+                style_common:color_two="@color/color_red_800"
+                style_common:stroke_two="2dp"
+                style_common:color_stroke_two="@color/color_hv_yelll"
+                style_common:corner_two="5dp"
+                style_common:color_txt_two="@color/white"
+                style_common:boo_one="false"
+                android:text="接受"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                style_common:layout_constraintRight_toRightOf="parent"
+                style_common:layout_constraintTop_toTopOf="parent"
+                android:includeFontPadding="false"
+                android:layout_gravity="top"
+                android:id="@+id/tv_date"
+                android:textColor="@color/color_recylce_item_date_txtcolor"
+                android:textSize="@dimen/dimen_recylce_item_date_txtsize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
+                android:id="@+id/tv_txt"
+                style_common:layout_constraintTop_toBottomOf="@+id/tv_sendname"
+                style_common:layout_constraintLeft_toLeftOf="@+id/tv_sendname"
                 android:layout_marginTop="@dimen/dimen_recylce_item_inner_margin"
                 android:layout_marginBottom="@dimen/dimen_recylce_item_inner_margin"
                 android:includeFontPadding="false"
@@ -88,20 +92,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-
-
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
+                style_common:layout_constraintLeft_toLeftOf="parent"
+                style_common:layout_constraintTop_toBottomOf="@+id/tv_txt"
                 android:id="@+id/ll_fuction"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <View
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"/>
                 <com.siweisoft.heavycenter.module.view.text.BgTextView
+                    android:layout_marginTop="5dp"
+                    style_common:layout_constraintRight_toRightOf="parent"
+                    style_common:layout_constraintTop_toTopOf="parent"
                     android:includeFontPadding="false"
                     android:id="@+id/bt_reject"
                     android:paddingTop="3dp"
@@ -129,6 +132,9 @@
                     android:layout_height="wrap_content" />
 
                 <com.siweisoft.heavycenter.module.view.text.BgTextView
+                    android:layout_marginRight="15dp"
+                    style_common:layout_constraintRight_toLeftOf="@+id/bt_reject"
+                    style_common:layout_constraintBottom_toBottomOf="@+id/bt_reject"
                     android:includeFontPadding="false"
                     android:id="@+id/bt_agree"
                     android:paddingTop="3dp"
@@ -156,6 +162,9 @@
                     android:layout_height="wrap_content" />
 
                 <com.siweisoft.heavycenter.module.view.text.BgTextView
+                    android:layout_marginRight="15dp"
+                    style_common:layout_constraintRight_toLeftOf="@+id/bt_agree"
+                    style_common:layout_constraintBottom_toBottomOf="@+id/bt_agree"
                     android:includeFontPadding="false"
                     android:id="@+id/bt_mana"
                     android:paddingTop="3dp"
@@ -184,8 +193,7 @@
 
 
 
-            </LinearLayout>
-
-        </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </layout>
