--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -226,6 +226,7 @@
             android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
+                android:background="@color/white"
                 android:id="@+id/recycle"
                 android:scrollbars="vertical"
                 android:scrollbarSize="10dp"
