--- a/heavycenter/src/main/res/layout/frag_mana_cars.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_cars.xml
@@ -7,55 +7,52 @@
             type="String" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/content_acct"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.android.lib.view.title.TitleView
+        <LinearLayout
             android:elevation="2dp"
             android:background="@color/color_base"
-            android:id="@+id/title"
-            style_common:iv_left ="@drawable/icon_hv_back"
-            style_common:iv_right ="@drawable/icon_hv_scan"
-            style_common:iv_right2 ="@drawable/icon_hv_add"
-            style_common:txt_mid ="车辆管理"
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+            <com.android.lib.view.title.TitleView
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                android:elevation="2dp"
+                android:background="@color/color_base"
+                android:id="@+id/title"
+                style_common:iv_left ="@drawable/icon_hv_back"
+                style_common:iv_right ="@drawable/icon_hv_scan"
+                style_common:iv_right2 ="@drawable/icon_hv_add"
+                style_common:txt_mid ="车辆管理"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
             <com.siweisoft.heavycenter.module.view.menu.TopTypeView
                 android:id="@+id/topview"
                 style_toptypeview:txts="发货中,我的车辆,收货中"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                android:layout_below="@id/topview"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        </LinearLayout>
 
 
-                <com.android.lib.view.viewpager.ScrollbleViewPager
-                    android:orientation="vertical"
-                    android:id="@+id/ll_cntent"
-                    android:layout_centerInParent="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+        <com.android.lib.view.viewpager.ScrollbleViewPager
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintRight_toRightOf="parent"
+            style_common:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            android:id="@+id/ll_cntent"
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-            <com.siweisoft.heavycenter.module.view.menu.ScrollMenu
-                android:id="@+id/scrollmenu"
-                android:layout_marginTop="-1.5dp"
-                android:layout_below="@id/topview"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"/>
 
-        </RelativeLayout>
-            </LinearLayout>
+
+            </android.support.constraint.ConstraintLayout>
 </layout>
