--- a/heavycenter/src/main/res/layout/frag_mana_store_info.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store_info.xml
@@ -37,8 +37,7 @@
                 android:id="@+id/item_id"
                 style_common:txt_maxlenth="11"
                 style_common:txt_left = "仓库名称"
-                style_common:txt_two ="请选择"
-                style_common:txt_mid = "请输入"
+                style_common:txt_hint = "请输入"
                 style_common:iv_right = "@color/transparent"
                 style_common:boo_edit = "true"
                 android:layout_width="match_parent"
@@ -51,8 +50,7 @@
                 style_common:inputType="3"
                 style_common:txt_maxlenth="11"
                 style_common:txt_left = "最大库存"
-                style_common:txt_two ="请选择"
-                style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请输入"
                 style_common:iv_right = "@color/transparent"
                 style_common:boo_edit = "true"
                 android:layout_width="match_parent"
@@ -64,8 +62,7 @@
                 style_common:inputType="3"
                 style_common:txt_maxlenth="11"
                 style_common:txt_left = "安全库存"
-                style_common:txt_two ="请选择"
-                style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请输入"
                 style_common:iv_right = "@color/transparent"
                 style_common:boo_edit = "true"
                 android:layout_width="match_parent"
@@ -76,8 +73,7 @@
                 android:id="@+id/item_des"
                 style_common:txt_maxlenth="11"
                 style_common:txt_left = "位置描述"
-                style_common:txt_two ="请选择"
-                style_common:txt_mid = "请输入"
+            style_common:txt_hint = "请输入"
                 style_common:iv_right = "@color/transparent"
                 style_common:boo_edit = "true"
                 android:layout_width="match_parent"
