--- a/heavycenter/src/main/res/layout/frag_mana_user_info.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_user_info.xml
@@ -11,15 +11,6 @@
         android:layout_height="match_parent"
         android:background="@color/color_grey_200"
         android:orientation="vertical">
-        <com.android.lib.view.title.TitleView
-            android:elevation="2dp"
-            android:background="@color/color_base"
-            android:id="@+id/title"
-            style_common:txt_mid ="用户信息"
-            style_common:iv_left ="@drawable/icon_hv_back"
-            style_common:iv_right ="@drawable/icon_hv_scan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
         <RelativeLayout
             android:background="@color/white"
@@ -27,28 +18,31 @@
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/head"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/icon_hv_user_on"
+                android:src="@drawable/icon_hv_myce_head"
                 android:layout_width="120dp"
                 android:layout_height="120dp" />
         </RelativeLayout>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_name"
             android:layout_marginTop="10dp"
             style_common:minwidth ="40dp"
             style_common:txt_left = "姓名"
-            style_common:txt_mid = "请输入"
-            style_common:boo_edit = "false"
+            style_common:txt_hint = "请输入"
+            style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_phone"
             style_common:minwidth ="40dp"
             style_common:txt_left = "手机号"
-            style_common:txt_mid = "请输入"
-            style_common:boo_edit = "false"
+            style_common:txt_hint = "请输入"
+            style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -72,6 +66,7 @@
 
 
             <TextView
+                android:id="@+id/tv_user"
                 android:layout_marginLeft="15dp"
                 android:background="@drawable/bg_hv_sel_sharp10_yell_while"
                 android:textColor="@color/color_yell_white"
@@ -84,20 +79,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/bg_hv_sel_sharp10_yell_while"
-                android:textColor="@color/color_yell_white"
-                android:textSize="16sp"
-                android:text="驾驶员"
-                android:paddingLeft="17dp"
-                android:paddingRight="17dp"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/tv_mana"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/bg_hv_sel_sharp10_yell_while"
