--- a/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
@@ -7,62 +7,54 @@
             type="String" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical">
+
         <com.android.lib.view.title.TitleView
-            android:elevation="2dp"
-            android:background="@color/color_base"
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toTopOf="parent"
             android:id="@+id/title"
-            style_common:iv_left = "@drawable/icon_hv_back"
-            style_common:iv_right = "@drawable/icon_hv_scan"
-            style_common:txt_mid ="单位地址"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            app:srlEnablePureScrollMode="true"
-            app:srlDragRate="0.2"
-            android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
+            android:layout_height="wrap_content"
+            android:background="@color/color_base"
+            android:elevation="2dp"
+            style_common:iv_left="@drawable/icon_hv_back"
+            style_common:iv_right="@drawable/icon_hv_scan"
+            style_common:txt_mid="单位地址" />
 
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            android:paddingLeft="10dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_city"
-                android:gravity="center"
-                android:text="选择城市"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:src="@drawable/icon_addr_down"
-                android:layout_width="15sp"
-                android:layout_height="15sp" />
-
-            <com.siweisoft.heavycenter.module.view.input.SearchBindUnitMyceItem
-                android:id="@+id/search"
-                style_common:txt_mid ="请输入公司地址"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
         <TextView
+            android:textSize="17sp"
+            android:layout_marginTop="5dp"
+            android:drawableRight="@drawable/icon_addr_down"
+            android:paddingLeft="10dp"
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toBottomOf="@+id/title"
+            android:id="@+id/tv_city"
+            android:gravity="center"
+            android:text="选择城市"
+            android:drawablePadding="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp" />
+
+        <com.siweisoft.heavycenter.module.view.input.SearchBindUnitMyceItem
+            style_common:layout_constraintLeft_toRightOf="@+id/tv_city"
+            style_common:layout_constraintBottom_toBottomOf="@+id/tv_city"
+            style_common:layout_constraintRight_toRightOf="parent"
+            style_common:layout_constraintTop_toTopOf="@+id/tv_city"
+            android:id="@+id/search"
+            style_common:txt_mid ="请输入公司地址"
+            android:layout_width="0dp"
+            android:layout_height="35dp"/>
+
+        <TextView
+            android:id="@+id/lab_addr"
+            android:layout_marginTop="5dp"
+            style_common:layout_constraintTop_toBottomOf="@+id/tv_city"
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintRight_toRightOf="parent"
             android:background="@color/color_grey_200"
             android:paddingLeft="10dp"
             android:textSize="17sp"
@@ -72,48 +64,47 @@
             android:layout_width="match_parent"
             android:layout_height="40dp" />
 
-        <LinearLayout
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
-
-
-            <TextView
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:id="@+id/tv_addr"
-                android:paddingLeft="10dp"
-                android:textSize="14sp"
-                android:textColor="@color/black"
-                android:gravity="center_vertical"
-                android:layout_width="0dp"
-                android:layout_height="40dp" />
-
-
-            <LinearLayout
-                android:id="@+id/ll_local"
-                android:gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            <ImageView
-                android:layout_marginRight="5dp"
-                android:src="@drawable/icon_hv_local"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-            <TextView
-                android:paddingRight="10dp"
-                android:textSize="14sp"
-                android:textColor="@color/color_hv_yelll"
-                android:gravity="center_vertical|right"
-                android:text="重新定位"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp" />
-            </LinearLayout>
-        </LinearLayout>
 
         <TextView
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toBottomOf="@+id/lab_addr"
+            android:singleLine="true"
+            android:id="@+id/tv_addr"
+            android:paddingLeft="10dp"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_height="40dp" />
+
+
+        <TextView
+            android:id="@+id/tv_local"
+            style_common:layout_constraintRight_toRightOf="parent"
+            style_common:layout_constraintTop_toBottomOf="@+id/lab_addr"
+            android:paddingRight="10dp"
+            android:textSize="14sp"
+            android:textColor="@color/color_hv_yelll"
+            android:gravity="center_vertical|right"
+            android:text="重新定位"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp" />
+
+
+        <ImageView
+            android:id="@+id/iv_local"
+            style_common:layout_constraintRight_toLeftOf="@+id/tv_local"
+        style_common:layout_constraintBottom_toBottomOf="@+id/tv_local"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/icon_hv_local"
+            android:layout_width="20dp"
+            android:layout_height="40dp" />
+
+
+        <TextView
+            android:id="@+id/lab_around"
+            style_common:layout_constraintTop_toBottomOf="@+id/tv_addr"
+            style_common:layout_constraintLeft_toLeftOf="parent"
             android:background="@color/color_grey_200"
             android:paddingLeft="10dp"
             android:textSize="17sp"
@@ -122,14 +113,20 @@
             android:text="附近地址"
             android:layout_width="match_parent"
             android:layout_height="40dp" />
+
+
         <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
+            style_common:layout_constraintTop_toBottomOf="@+id/lab_around"
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintRight_toRightOf="parent"
+            style_common:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/recycle"
             android:scrollbars="vertical"
             android:scrollbarSize="10dp"
             android:fadeScrollbars="false"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-    </LinearLayout>
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
