--- a/heavycenter/src/main/res/layout/item_main_order_detail_driver.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_driver.xml
@@ -44,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
+                    android:singleLine="true"
                     android:textColor="@color/hv_color_text"
                     android:textSize="17sp"
                     android:text="@{item_main_order_detail_driver.carLicenseNo}"
@@ -53,6 +54,7 @@
                     android:layout_height="match_parent" />
 
                 <TextView
+                    android:singleLine="true"
                     android:textColor="@color/hv_color_text"
                     android:textSize="17sp"
                     android:layout_marginRight="10dp"
@@ -62,6 +64,7 @@
                     android:layout_height="match_parent" />
 
                 <TextView
+                    android:singleLine="true"
                     android:textColor="@color/hv_color_text"
                     android:textSize="17sp"
                     android:text="@{item_main_order_detail_driver.trueName}"
@@ -71,6 +74,7 @@
                     android:layout_height="match_parent" />
 
                 <TextView
+                    android:singleLine="true"
                     android:textColor="@color/hv_color_text"
                     android:textSize="17sp"
                     android:text="@{item_main_order_detail_driver.tel}"
