--- a/heavycenter/src/main/res/layout/item_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new.xml
@@ -1,51 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/color_item_content"
-              android:foreground="?android:attr/selectableItemBackground"
-              android:paddingLeft="@dimen/dimen_item_content_left_padding">
-    <LinearLayout
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_item_content"
+        android:foreground="?android:attr/selectableItemBackground"
+      >
+
+    <TextView
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tv_left"
+            android:layout_marginLeft="15dp"
+            android:text="文字内容"
+            android:textSize="17dp"
+            android:textColor="@color/hv_color_text_title"
             android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_item_content_h">
-
-        <TextView
-                android:id="@+id/tv_left"
-                android:layout_marginLeft="8dp"
-                android:text="文字内容"
-                android:textSize="17dp"
-                android:textColor="@color/hv_color_text_title"
-                android:gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-        <LinearLayout
-                android:orientation="horizontal"
-                android:id="@+id/txtcontainer"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
-
-        </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
 
+    <LinearLayout
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_left"
+            android:orientation="horizontal"
+            android:id="@+id/txtcontainer"
+            android:layout_marginLeft="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <ImageView
-                android:id="@+id/iv_right"
-                android:layout_marginRight="@dimen/dimen_item_content_right_txt_right_padding"
-                android:layout_width="@dimen/dimen_item_content_right_icon_size"
-                android:layout_height="@dimen/dimen_item_content_right_icon_size" />
 
+    <ImageView
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginRight="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/iv_right"
+            android:layout_width="@dimen/dimen_item_content_right_icon_size"
+            android:layout_height="@dimen/dimen_item_content_right_icon_size" />
 
-    </LinearLayout>
 
     <View
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_left"
             android:layout_marginLeft="8dp"
             android:id="@+id/divide"
             android:background="@color/color_item_content_gap"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_item_content_gap_size"/>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
