--- a/heavycenter/src/main/res/layout/item_acct_input_code.xml
+++ b/heavycenter/src/main/res/layout/item_acct_input_code.xml
@@ -29,7 +29,7 @@
                 android:paddingLeft="10dp"
                 android:textSize="18sp"
                 android:textColor="@color/white"
-                android:background="@color/transparent"
+                android:background="@android:color/transparent"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
