--- a/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
@@ -80,11 +80,11 @@
 
 
         <TextView
+            android:id="@+id/tv_carno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_hv_sharp2_blue_solid"
             android:padding="1dp"
-            android:text="第104车"
             android:textColor="@color/black"
             android:textSize="13sp"
             style_common:layout_constraintBaseline_toBaselineOf="@+id/tv_productName"
