--- a/heavycenter/src/main/res/layout/frag_mana_good_new.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_good_new.xml
@@ -66,7 +66,7 @@
             style_common:txt_maxlenth="11"
             style_common:txt_left = "最大库存"
             style_common:txt_hint = "请输入"
-            style_common:iv_right = "@color/transparent"
+            style_common:iv_right = "@android:color/transparent"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -77,7 +77,7 @@
             style_common:txt_maxlenth="11"
             style_common:txt_left = "安全库存"
             style_common:txt_hint = "请输入"
-            style_common:iv_right = "@color/transparent"
+            style_common:iv_right = "@android:color/transparent"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
