--- a/heavycenter/src/main/res/layout/item_myce_unit_bind_search.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind_search.xml
@@ -32,7 +32,7 @@
             android:paddingLeft="10dp"
             android:layout_marginLeft="20dp"
             android:textSize="17sp"
-            android:background="@color/transparent"
+            android:background="@android:color/transparent"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
