--- a/heavycenter/src/main/res/layout/item_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new.xml
@@ -27,11 +27,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tv_left"
+        app:layout_constraintRight_toLeftOf="@+id/iv_right"
             android:orientation="horizontal"
             android:id="@+id/txtcontainer"
             android:layout_marginLeft="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
 
     <ImageView
