--- a/lib/src/main/res/layout/item_txt.xml
+++ b/lib/src/main/res/layout/item_txt.xml
@@ -7,17 +7,18 @@
     </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         >
         <TextView
+            android:textSize="20sp"
             android:id="@+id/tv_txt"
             android:gravity="center"
             android:textColor="@color/black"
             android:text="@{item_txt}"
             android:layout_width="100dp"
-            android:layout_height="30dp" />
+            android:layout_height="40dp" />
 
         <View
             android:background="@color/color_item_content_gap"
