--- a/lib/src/main/res/layout/layout_baseui.xml
+++ b/lib/src/main/res/layout/layout_baseui.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent"
+    android:background="@android:color/transparent"
     android:clickable="true"
     android:fitsSystemWindows="false"
     android:clipToPadding="true"
