--- a/lib/src/main/res/values/values.xml
+++ b/lib/src/main/res/values/values.xml
@@ -12,7 +12,7 @@
     <color name="color_item_content">@color/white</color>
     <color name="color_item_content_left_txt_color">@color/black</color>
     <color name="color_item_content_right_txt_color">@color/black</color>
-
+    <color name="transparent">#00000000</color>
 
 
 
